crates/vue_oxc_toolkit/fixtures/error/recoverable-directive.vue
<template>
  <div :key="() => { return { a =1, b = 1 } }"></div>
</template>

<script lang="ts" setup></script>

<style></style>
